--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "ScanHH": {
       "commandName": "Project",
-      "commandLineArgs": "программист_C#_cfg.json"
+      "commandLineArgs": "test.json"
     }
   }
 }
